# Python-homework-cycle-2

./: .flake8  .gitignore  README.md  pyproject.toml
src/: loader.py  main.py  task.py
tests/: test_loader.py  test_task.py
