[project]
name = "python-homework-cycle-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Galina Mordovina",email = "glukoloid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.isort]
line_length = 140
multi_line_output = 3

